# santachorus

./: .gitignore  BUILD_COMMANDS.md  CMakeLists.txt  Info.plist  Makefile  README.md  VERSION_SYSTEM.md  build.sh  build_dev.sh  build_intel.sh  build_universal.sh  create_installers.sh  dev  increment_version.sh
Installers/: README.md
Installers/Windows/: create_installer.bat  license.txt  santa_chorus_installer.nsi
Installers/macOS/: create_universal_installer.sh
Resources/: README.txt  full_bg.psd
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SaturatorEngine.cpp  SaturatorEngine.h  Version.h.in
